# telemetry_toolkit

./: .gitignore  README.md  coverage.xml  pyproject.toml  run_sim.py  setup.py  test_report.html
.github/workflows/: telemetry_tests.yml
examples/: basic_simulation.py  debug_dashboard.py  run_dashboard.py
requirements/: base.txt  dev.txt
scripts/: generate_test_report.py  run_tests.sh  test_report.html
scripts/test-results/: junit.xml
src/telemetry_toolkit/: _version.py
src/telemetry_toolkit/simulator/: __init__.py  control.py  data.py  generator.py
src/telemetry_toolkit/visualization/: __init__.py  dashboard.py  dashboard.py.bak
src/telemetry_toolkit/visualization/components/: __init__.py  control_panel.jsx  control_panel.py
test-results/: junit.xml
tests/: conftest.py
tests/test_simulator/: test_control.py  test_data.py  test_generator.py
