[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry_toolkit"
version = "0.1.0"
description = "A toolkit for real-time telemetry visualization and analysis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "dash>=2.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["telemetry_toolkit"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=telemetry_toolkit"
asyncio_default_fixture_loop_scope = "function"