[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry_toolkit"
version = "0.1.0"
description = "A toolkit for real-time telemetry visualization and analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jellyroll", email = "shanefs24@gmail.com"}
]
keywords = ["telemetry", "visualization", "realtime", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "dash>=2.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.9.0",
    "dash-bootstrap-components"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.940",
    "pre-commit>=2.17.0"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18.0"
]

[project.urls]
Repository = "https://github.com/Mr-Jellyroll/telemetry_toolkit"
Documentation = "https://telemetry-toolkit.readthedocs.io"
"Bug Tracker" = "https://github.com/"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["telemetry_toolkit"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["docs/"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "plotly.*",
    "numpy.*",
    "pandas.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=telemetry_toolkit"
asyncio_default_fixture_loop_scope = "function"